# steerbench

./: .gitignore  .modalpath  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  CROSS_MODEL_REPORT.md  LICENSE  M0_REPORT.md  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: dose_response_llama.csv  dose_response_sentiment_llama.csv  dose_response_sentiment_qwen.csv  dose_response_verbosity_llama.csv  dose_response_verbosity_mistral.csv  layer_sweep_coeff.csv  layer_sweep_llama.csv  layer_sweep_llama_redosed.csv  layer_sweep_qwen.csv  layer_sweep_sentiment_llama.csv  layer_sweep_sentiment_mistral.csv  layer_sweep_verbosity_llama.csv  layer_sweep_verbosity_mistral.csv  layer_sweep_verbosity_qwen.csv  side_effects_llama.csv  side_effects_mistral.csv  side_effects_mistral_dose.csv  side_effects_qwen.csv  stability_verbosity_qwen.json
artifacts/example_report_card/: qwen_formality.html  qwen_formality.md
data/examples/: formality_qwen2.5-7b.gguf  formality_qwen2.5-7b.pt
drafts/: cross_model_blog.md
experiments/: RESULTS_small_model.md  modal_app.py  reproduce.sh
notebooks/: steerbench_quickstart.ipynb
results/: dose_response.csv  dose_response_base.csv  dose_response_mistral.csv  dose_response_qwen.csv  dose_response_qwen0.5b.csv  dose_response_qwen1.5b.csv  dose_response_sentiment_mistral.csv  dose_response_verbosity_qwen.csv  layer_sweep.csv  layer_sweep_mistral.csv  layer_sweep_mistral_redosed.csv  layer_sweep_qwen0.5b.csv  layer_sweep_qwen1.5b.csv  layer_sweep_qwen1.5b_a044.csv  layer_sweep_sentiment_qwen.csv  side_effects_llama_dose.csv  side_effects_qwen_dose.csv  stability_formality_llama.json  stability_formality_llama_ss90.json  stability_formality_qwen.json  stability_formality_qwen_ss90.json  stability_mistral.json  stability_verbosity_llama.json  stability_verbosity_mistral.json
src/steerbench/: __init__.py  cli.py  metrics.py  report.py  vectors.py
tests/: test_cli.py  test_metrics.py  test_report.py  test_smoke.py  test_vectors.py
